feat: Complete PWA refactoring for GitHub Pages deployment
✅ PWA Optimization:
- Updated all paths to relative for static hosting compatibility
- Fixed Service Worker registration and cache strategies
- Corrected Web App Manifest for proper PWA installation
- Enhanced offline functionality with intelligent caching

🧪 Testing Framework:
- Added comprehensive Cypress E2E tests
- Implemented navigation, form validation, and cart functionality tests
- Fixed emoji compatibility issues for cross-platform support
- Validated all core user journeys

🔧 Code Quality:
- Cleaned up unnecessary configuration files
- Optimized config.json removing unused API endpoints
- Added proper .gitignore for development workflow
- Organized asset structure with favicon support

🐛 Bug Fixes:
- Fixed navigation links in all page templates
- Corrected JavaScript references for proper module loading
- Resolved PWA installation prompts and offline detection
- Fixed checkout flow and WhatsApp integration

📱 GitHub Pages Ready:
- All assets use relative paths
- Service Worker paths corrected for static hosting
- Manifest scope and start_url configured for subdirectory deployment
- Tested installation and offline functionality

Ready for production deployment on GitHub Pages with full PWA capabilities.

--- a/config.json
+++ b/config.json
@@ -3,38 +3,18 @@
     "name": "Marmita.One",
     "version": "0.1.0-beta",
     "build": "2025.08.19",
-    "environment": "beta",
-    "repository": "marmita-one"
+    "environment": "beta"
   },
   "features": {
     "pwa": true,
     "offline": true,
-    "notifications": true,
-    "analytics": true,
     "whatsapp_integration": true,
     "custom_orders": true,
     "preset_orders": true
   },
-  "api": {
-    "base_url": "https://api.marmita.one",
-    "version": "v1",
-    "endpoints": {
-      "orders": "/orders",
-      "menu": "/menu",
-      "status": "/status"
-    }
-  },
   "branding": {
     "primary_color": "#0a7d4f",
     "secondary_color": "#0d9c63",
-    "accent_color": "#e10600",
-    "logo_url": "/assets/icons/icon-512x512.png"
-  },
-  "beta_features": {
-    "advanced_analytics": true,
-    "push_notifications": true,
-    "background_sync": true,
-    "voice_orders": false,
-    "ai_recommendations": false
+    "accent_color": "#e10600"
   }
 }
